# camCtrl

./: .gitignore  LICENSE  README.md  camCtrl.py  cam_ops.py  config.py
assets/icons/: README.md
installers/common/: bundle_dependencies.sh  bundle_gphoto2.sh  install_icon.sh
installers/linux/: README.md  check_dependencies.sh  create_release_package.sh  install.sh  uninstall.sh
packaging/: pyproject.toml  requirements.txt  setup.py
