[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camctrl"
version = "0.4"
description = "Remote control for DSLR and mirrorless cameras via USB"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gphoto2>=2.5.0",
]

[project.scripts]
camctrl = "camctrl:main"

