[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camctrl"
version = "0.4"
description = "Remote control for DSLR and mirrorless cameras via USB"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    # No external dependencies - all libraries are standard library or system-provided
    # gphoto2 is used as a command-line tool, not a Python package
]

[project.scripts]
camctrl = "camctrl:main"

